// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateNotebookForm creates correct snapshot for create Notebook Form when the type supports single hostname 1`] = `
<div>
  <form>
    <div>
      Field Mock: 
      {"InputLabelProps":{"shrink":true},"name":"displayName","label":"Display Name","placeholder":"Display Name"}
    </div>
    <div>
      Field Mock: 
      {"InputLabelProps":{"shrink":true},"name":"type","label":"Type","options":[{"text":"JupyterLab","value":"JUPYTER_LAB"},{"text":"Jupyter","value":"JUPYTER"},{"text":"RStudio","value":"RSTUDIO"},{"text":"Zeppelin","value":"ZEPPELIN"}]}
    </div>
    <div>
      Field Mock: 
      {"InputLabelProps":{"shrink":true},"name":"name","label":"URL Name","placeholder":"Notebook Name for URL","startText":"http://localhost/resource/testproj/","endText":""}
    </div>
    <div>
      Field Mock: 
      {"InputLabelProps":{"shrink":true},"name":"volumeMount","label":"Data Store to Mount","options":[{"text":"First Data Store","value":"alpha"},{"text":"Second Data Store","value":"beta"}]}
    </div>
    <div>
      Field Mock: 
      {"InputLabelProps":{"shrink":true},"name":"description","label":"Description","placeholder":"Description"}
    </div>
    <div>
      Field Mock: 
      {"InputLabelProps":{"shrink":true},"name":"shared","label":"Sharing Status","options":[{"text":"Private","value":"private"},{"text":"Public","value":"public"}]}
    </div>
    <div>
      Field Mock: 
      {"InputLabelProps":{"shrink":true},"name":"assets","label":"Assets","projectKey":"testproj"}
    </div>
    CreateFormControls Mock 
    {}
  </form>
</div>
`;

exports[`CreateNotebookForm creates correct snapshot for create Notebook Form when there are not version options 1`] = `
<div>
  <form>
    <div>
      Field Mock: 
      {"InputLabelProps":{"shrink":true},"name":"displayName","label":"Display Name","placeholder":"Display Name"}
    </div>
    <div>
      Field Mock: 
      {"InputLabelProps":{"shrink":true},"name":"type","label":"Type","options":[{"text":"JupyterLab","value":"JUPYTER_LAB"},{"text":"Jupyter","value":"JUPYTER"},{"text":"RStudio","value":"RSTUDIO"},{"text":"Zeppelin","value":"ZEPPELIN"}]}
    </div>
    <div>
      Field Mock: 
      {"InputLabelProps":{"shrink":true},"name":"name","label":"URL Name","placeholder":"Notebook Name for URL","startText":"http://testproj-","endText":".datalabs.localhost"}
    </div>
    <div>
      Field Mock: 
      {"InputLabelProps":{"shrink":true},"name":"volumeMount","label":"Data Store to Mount","options":[{"text":"First Data Store","value":"alpha"},{"text":"Second Data Store","value":"beta"}]}
    </div>
    <div>
      Field Mock: 
      {"InputLabelProps":{"shrink":true},"name":"description","label":"Description","placeholder":"Description"}
    </div>
    <div>
      Field Mock: 
      {"InputLabelProps":{"shrink":true},"name":"shared","label":"Sharing Status","options":[{"text":"Private","value":"private"},{"text":"Public","value":"public"}]}
    </div>
    <div>
      Field Mock: 
      {"InputLabelProps":{"shrink":true},"name":"assets","label":"Assets","projectKey":"testproj"}
    </div>
    CreateFormControls Mock 
    {}
  </form>
</div>
`;

exports[`CreateNotebookForm creates correct snapshot for create Notebook Form when there are version options 1`] = `
<div>
  <form>
    <div>
      Field Mock: 
      {"InputLabelProps":{"shrink":true},"name":"displayName","label":"Display Name","placeholder":"Display Name"}
    </div>
    <div>
      Field Mock: 
      {"InputLabelProps":{"shrink":true},"name":"type","label":"Type","options":[{"text":"JupyterLab","value":"JUPYTER_LAB"},{"text":"Jupyter","value":"JUPYTER"},{"text":"RStudio","value":"RSTUDIO"},{"text":"Zeppelin","value":"ZEPPELIN"}]}
    </div>
    <div>
      Field Mock: 
      {"InputLabelProps":{"shrink":true},"name":"version","label":"Version","options":[{"text":"0.1.0","value":"0.1.0"},{"text":"0.2.0","value":"0.2.0"}]}
    </div>
    <div>
      Field Mock: 
      {"InputLabelProps":{"shrink":true},"name":"name","label":"URL Name","placeholder":"Notebook Name for URL","startText":"http://testproj-","endText":".datalabs.localhost"}
    </div>
    <div>
      Field Mock: 
      {"InputLabelProps":{"shrink":true},"name":"volumeMount","label":"Data Store to Mount","options":[{"text":"First Data Store","value":"alpha"},{"text":"Second Data Store","value":"beta"}]}
    </div>
    <div>
      Field Mock: 
      {"InputLabelProps":{"shrink":true},"name":"description","label":"Description","placeholder":"Description"}
    </div>
    <div>
      Field Mock: 
      {"InputLabelProps":{"shrink":true},"name":"shared","label":"Sharing Status","options":[{"text":"Private","value":"private"},{"text":"Public","value":"public"}]}
    </div>
    <div>
      Field Mock: 
      {"InputLabelProps":{"shrink":true},"name":"assets","label":"Assets","projectKey":"testproj"}
    </div>
    CreateFormControls Mock 
    {}
  </form>
</div>
`;
